--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lab_02_answers",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/acqD-IQR)\r # Lab 04 : The Joy of JavaScript/TypeScript Part 1",
   "main": "index.js",
   "devDependencies": {
     "@babel/core": "*",
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.14.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
-  }
+  },
+  "keywords": []
 }
